[gd_scene load_steps=17 format=4 uid="uid://bl2s883me6tip"]

[ext_resource type="Script" uid="uid://drlqthyfnl327" path="res://Dungeon/dungeon_2.gd" id="1_75ekg"]
[ext_resource type="PackedScene" uid="uid://c1onywepqrykl" path="res://UI/player_health_ui.tscn" id="2_hissl"]
[ext_resource type="PackedScene" uid="uid://f75n6uvmavva" path="res://UI/princess_health_ui.tscn" id="3_ww7ku"]
[ext_resource type="Script" uid="uid://5shhc343p2a4" path="res://Dungeon/dungeon_camera_2d.gd" id="4_v87w3"]
[ext_resource type="PackedScene" uid="uid://l10kiwsexaab" path="res://Combat/combat_manager.tscn" id="5_x6csh"]
[ext_resource type="PackedScene" uid="uid://cqv7hf2dkuljw" path="res://Dialogue/dialogue_room_manager.tscn" id="5_xueeg"]
[ext_resource type="Resource" uid="uid://ckhsuu4k1h8pm" path="res://Dialogue/Literal Dialogue/dungeon_2.dialogue" id="6_75ekg"]
[ext_resource type="PackedScene" uid="uid://cbtcrvc8377r3" path="res://Dungeon/dungeon_room.tscn" id="8_rfjwi"]
[ext_resource type="PackedScene" uid="uid://dka5wc1yusobs" path="res://Enemies/ghost.tscn" id="9_dbjap"]
[ext_resource type="PackedScene" uid="uid://mvgpyyrkt607" path="res://Dungeon/spikes.tscn" id="10_q36a5"]
[ext_resource type="PackedScene" uid="uid://6wkafegtbmeu" path="res://Enemies/spikeball.tscn" id="11_dtou2"]
[ext_resource type="PackedScene" uid="uid://4tgk781ue0k4" path="res://World/tile_map_layer.tscn" id="12_csb1e"]
[ext_resource type="TileSet" uid="uid://mt4o7s2t6ie6" path="res://World/desert_bg.tres" id="13_csm61"]
[ext_resource type="PackedScene" uid="uid://d24ateel8ltrn" path="res://Dungeon/chest.tscn" id="14_hvmxn"]
[ext_resource type="PackedScene" uid="uid://bursypx5unela" path="res://Player/player.tscn" id="16_d8joc"]
[ext_resource type="PackedScene" uid="uid://bixth4v8wdly8" path="res://NPCs/princess.tscn" id="17_8f62i"]

[node name="Dungeon2" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_75ekg")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PlayerHealthUI" parent="CanvasLayer" instance=ExtResource("2_hissl")]
z_index = 1

[node name="PrincessHealthUI" parent="CanvasLayer" instance=ExtResource("3_ww7ku")]

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
position_smoothing_enabled = true
position_smoothing_speed = 8.0
script = ExtResource("4_v87w3")

[node name="DialogueRoomManager" parent="." instance=ExtResource("5_xueeg")]
dialogueResource = ExtResource("6_75ekg")

[node name="CombatManager" parent="." instance=ExtResource("5_x6csh")]

[node name="DungeonRoom1" parent="." instance=ExtResource("8_rfjwi")]

[node name="DungeonRoom2" parent="." instance=ExtResource("8_rfjwi")]
position = Vector2(0, -240)

[node name="Ghost1" parent="DungeonRoom2" instance=ExtResource("9_dbjap")]
position = Vector2(80, 64)

[node name="Ghost2" parent="DungeonRoom2" instance=ExtResource("9_dbjap")]
position = Vector2(136, 88)

[node name="Ghost3" parent="DungeonRoom2" instance=ExtResource("9_dbjap")]
position = Vector2(216, 88)

[node name="Ghost4" parent="DungeonRoom2" instance=ExtResource("9_dbjap")]
position = Vector2(256, 64)

[node name="Spikeball" parent="DungeonRoom2" instance=ExtResource("11_dtou2")]
position = Vector2(184, 40)

[node name="Spikeball2" parent="DungeonRoom2" instance=ExtResource("11_dtou2")]
position = Vector2(288, 88)

[node name="Spikes1" parent="DungeonRoom2" instance=ExtResource("10_q36a5")]
position = Vector2(160, 240)
rotation = -1.5708

[node name="Spikes2" parent="DungeonRoom2" instance=ExtResource("10_q36a5")]
position = Vector2(160, 0)
rotation = 1.5708

[node name="DungeonRoom3" parent="." instance=ExtResource("8_rfjwi")]
position = Vector2(0, -480)

[node name="TileMapLayer" parent="." instance=ExtResource("12_csb1e")]
tile_map_data = PackedByteArray("AAAAAAAAAQACAAoAAAAAAAEAAQACAAoAAAAAAAIAAQACAAoAAAAAAAMAAQACAAoAAAAAAAQAAQACAAoAAAAAAAUAAQACAAoAAAAAAAYAAQACAAoAAAAAAAcAAQACAAoAAAAAAAgAAQACAAoAAAAAAAkAAQACAAoAAAAAAAoAAQACAAoAAAAAAAsAAQACAAoAAAAAAAwAAQACAAoAAAAAAA0AAQACAAoAAAAAAA4AAQACAAoAAAABAA4AAQACAAoAAAACAA4AAQACAAoAAAADAA4AAQACAAoAAAAEAA4AAQACAAoAAAAFAA4AAQACAAoAAAAGAA4AAQACAAoAAAAHAA4AAQACAAoAAAAIAA4AAQACAAoAAAAJAA4AAQACAAoAAAAKAA4AAQACAAoAAAALAA4AAQACAAoAAAAMAA4AAQACAAoAAAANAA4AAQACAAoAAAAOAA4AAQACAAoAAAAPAA4AAQACAAoAAAAQAA4AAQACAAoAAAARAA4AAQACAAoAAAASAA4AAQACAAoAAAATAA4AAQACAAoAAAATAAAAAQACAAoAAAATAAEAAQACAAoAAAATAAIAAQACAAoAAAATAAMAAQACAAoAAAATAAQAAQACAAoAAAATAAUAAQACAAoAAAATAAgAAQACAAoAAAATAAkAAQACAAoAAAATAAoAAQACAAoAAAATAAsAAQACAAoAAAATAAwAAQACAAoAAAATAA0AAQACAAoAAAAAAP//AQACAAoAAAABAP//AQACAAoAAAABAAAAAQACAAoAAAACAP//AQACAAoAAAACAAAAAQACAAoAAAADAP//AQACAAoAAAADAAAAAQACAAoAAAAEAP//AQACAAoAAAAEAAAAAQACAAoAAAAFAP//AQACAAoAAAAFAAAAAQACAAoAAAAGAP//AQACAAoAAAAGAAAAAQACAAoAAAAHAP//AQACAAoAAAAHAAAAAQACAAoAAAAIAP//AQACAAoAAAAIAAAAAQACAAoAAAALAP//AQACAAoAAAALAAAAAQACAAoAAAAMAP//AQACAAoAAAAMAAAAAQACAAoAAAANAP//AQACAAoAAAANAAAAAQACAAoAAAAOAP//AQACAAoAAAAOAAAAAQACAAoAAAAPAP//AQACAAoAAAAPAAAAAQACAAoAAAAQAP//AQACAAoAAAAQAAAAAQACAAoAAAARAP//AQACAAoAAAARAAAAAQACAAoAAAASAP//AQACAAoAAAASAAAAAQACAAoAAAATAP//AQACAAoAAAAAAOL/AQACAAoAAAAAAOP/AQACAAoAAAAAAOT/AQACAAoAAAAAAOX/AQACAAoAAAAAAOb/AQACAAoAAAAAAOf/AQACAAoAAAAAAOj/AQACAAoAAAAAAOn/AQACAAoAAAAAAOr/AQACAAoAAAAAAOv/AQACAAoAAAAAAOz/AQACAAoAAAAAAO3/AQACAAoAAAAAAO7/AQACAAoAAAAAAO//AQACAAoAAAAAAPD/AQACAAoAAAAAAPH/AQACAAoAAAAAAPL/AQACAAoAAAAAAPP/AQACAAoAAAAAAPT/AQACAAoAAAAAAPX/AQACAAoAAAAAAPb/AQACAAoAAAAAAPf/AQACAAoAAAAAAPj/AQACAAoAAAAAAPn/AQACAAoAAAAAAPr/AQACAAoAAAAAAPv/AQACAAoAAAAAAPz/AQACAAoAAAAAAP3/AQACAAoAAAAAAP7/AQACAAoAAAATAOL/AQACAAoAAAATAOP/AQACAAoAAAATAOT/AQACAAoAAAATAOX/AQACAAoAAAATAOb/AQACAAoAAAATAOf/AQACAAoAAAATAOj/AQACAAoAAAATAOn/AQACAAoAAAATAOr/AQACAAoAAAATAOv/AQACAAoAAAATAOz/AQACAAoAAAATAO3/AQACAAoAAAATAO7/AQACAAoAAAATAO//AQACAAoAAAATAPD/AQACAAoAAAATAPH/AQACAAoAAAATAPL/AQACAAoAAAATAPP/AQACAAoAAAATAPT/AQACAAoAAAATAPX/AQACAAoAAAATAPb/AQACAAoAAAATAPf/AQACAAoAAAATAPj/AQACAAoAAAATAPn/AQACAAoAAAATAPr/AQACAAoAAAATAPv/AQACAAoAAAATAPz/AQACAAoAAAATAP3/AQACAAoAAAATAP7/AQACAAoAAAABAPD/AQACAAoAAAABAPH/AQACAAoAAAACAPD/AQACAAoAAAACAPH/AQACAAoAAAADAPD/AQACAAoAAAADAPH/AQACAAoAAAAEAPD/AQACAAoAAAAEAPH/AQACAAoAAAAFAPD/AQACAAoAAAAFAPH/AQACAAoAAAAGAPD/AQACAAoAAAAGAPH/AQACAAoAAAAHAPD/AQACAAoAAAAHAPH/AQACAAoAAAAIAPD/AQACAAoAAAAIAPH/AQACAAoAAAALAPD/AQACAAoAAAALAPH/AQACAAoAAAAMAPD/AQACAAoAAAAMAPH/AQACAAoAAAANAPD/AQACAAoAAAANAPH/AQACAAoAAAAOAPD/AQACAAoAAAAOAPH/AQACAAoAAAAPAPD/AQACAAoAAAAPAPH/AQACAAoAAAAQAPD/AQACAAoAAAAQAPH/AQACAAoAAAARAPD/AQACAAoAAAARAPH/AQACAAoAAAASAPD/AQACAAoAAAASAPH/AQACAAoAAAABAOL/AQACAAoAAAABAOP/AQADAAQAAAACAOL/AQACAAoAAAACAOP/AQADAAQAAAADAOL/AQACAAoAAAADAOP/AQADAAQAAAAEAOL/AQACAAoAAAAEAOP/AQADAAQAAAAFAOL/AQACAAoAAAAFAOP/AQADAAQAAAAGAOL/AQACAAoAAAAGAOP/AQADAAQAAAAHAOL/AQACAAoAAAAHAOP/AQADAAQAAAAIAOL/AQACAAoAAAAIAOP/AQADAAQAAAALAOL/AQACAAoAAAALAOP/AQADAAQAAAAMAOL/AQACAAoAAAAMAOP/AQADAAQAAAANAOL/AQACAAoAAAANAOP/AQADAAQAAAAOAOL/AQACAAoAAAAOAOP/AQADAAQAAAAPAOL/AQACAAoAAAAPAOP/AQADAAQAAAAQAOL/AQACAAoAAAAQAOP/AQADAAQAAAARAOL/AQACAAoAAAARAOP/AQADAAQAAAASAOL/AQACAAoAAAASAOP/AQADAAQAAAAJAOL/AQACAAoAAAAKAOL/AQACAAoAAAABAOT/AQADAAQAAAABAOX/AQADAAQAAAABAOb/AQADAAQAAAABAOf/AQADAAQAAAABAOj/AQADAAQAAAABAOn/AQADAAQAAAABAOr/AQADAAQAAAABAOv/AQADAAQAAAABAOz/AQADAAQAAAABAO3/AQADAAQAAAABAO7/AQADAAQAAAABAO//AQADAAQAAAACAOT/AQADAAQAAAACAOX/AQADAAQAAAACAOb/AQADAAQAAAACAOf/AQADAAQAAAACAOj/AQADAAQAAAACAOn/AQADAAQAAAACAOr/AQADAAQAAAACAOv/AQADAAQAAAACAOz/AQADAAQAAAACAO3/AQADAAQAAAACAO7/AQADAAQAAAACAO//AQADAAQAAAADAOT/AQADAAQAAAADAOX/AQADAAQAAAADAOr/AQADAAQAAAADAOv/AQADAAQAAAADAOz/AQADAAQAAAADAO3/AQADAAQAAAADAO7/AQADAAQAAAADAO//AQADAAQAAAAEAOT/AQADAAQAAAAEAOX/AQADAAQAAAAEAOr/AQADAAQAAAAEAOv/AQADAAQAAAAEAOz/AQADAAQAAAAEAO3/AQADAAQAAAAEAO7/AQADAAQAAAAEAO//AQADAAQAAAAFAOT/AQADAAQAAAAFAOX/AQADAAQAAAAFAOr/AQADAAQAAAAFAOv/AQADAAQAAAAFAOz/AQADAAQAAAAFAO3/AQADAAQAAAAFAO7/AQADAAQAAAAFAO//AQADAAQAAAAGAOT/AQADAAQAAAAGAOX/AQADAAQAAAAGAOr/AQADAAQAAAAGAOv/AQADAAQAAAAGAOz/AQADAAQAAAAGAO3/AQADAAQAAAAGAO7/AQADAAQAAAAGAO//AQADAAQAAAAHAOT/AQADAAQAAAAHAOX/AQADAAQAAAAHAOr/AQADAAQAAAAHAOv/AQADAAQAAAAHAOz/AQADAAQAAAAHAO3/AQADAAQAAAAHAO7/AQADAAQAAAAHAO//AQADAAQAAAAIAOT/AQADAAQAAAAIAOX/AQADAAQAAAAIAOr/AQADAAQAAAAIAOv/AQADAAQAAAAIAOz/AQADAAQAAAAIAO3/AQADAAQAAAAIAO7/AQADAAQAAAAIAO//AQADAAQAAAAJAOT/AQADAAQAAAAJAOX/AQADAAQAAAAJAOr/AQADAAQAAAAJAOv/AQADAAQAAAAJAOz/AQADAAQAAAAJAO3/AQADAAQAAAAJAO7/AQADAAQAAAAJAO//AQADAAQAAAAKAOT/AQADAAQAAAAKAOX/AQADAAQAAAAKAOr/AQADAAQAAAAKAOv/AQADAAQAAAAKAOz/AQADAAQAAAAKAO3/AQADAAQAAAAKAO7/AQADAAQAAAAKAO//AQADAAQAAAALAOT/AQADAAQAAAALAOX/AQADAAQAAAALAOb/AQADAAQAAAALAOf/AQADAAQAAAALAOj/AQADAAQAAAALAOn/AQADAAQAAAALAOr/AQADAAQAAAALAOv/AQADAAQAAAALAOz/AQADAAQAAAALAO3/AQADAAQAAAALAO7/AQADAAQAAAALAO//AQADAAQAAAAMAOT/AQADAAQAAAAMAOX/AQADAAQAAAAMAOb/AQADAAQAAAAMAOf/AQADAAQAAAAMAOj/AQADAAQAAAAMAOn/AQADAAQAAAAMAOr/AQADAAQAAAAMAOv/AQADAAQAAAAMAOz/AQADAAQAAAAMAO3/AQADAAQAAAAMAO7/AQADAAQAAAAMAO//AQADAAQAAAANAOT/AQADAAQAAAANAOX/AQADAAQAAAANAOb/AQADAAQAAAANAOf/AQADAAQAAAANAOj/AQADAAQAAAANAOn/AQADAAQAAAANAOr/AQADAAQAAAANAOv/AQADAAQAAAANAOz/AQADAAQAAAANAO3/AQADAAQAAAANAO7/AQADAAQAAAANAO//AQADAAQAAAAOAOT/AQADAAQAAAAOAOX/AQADAAQAAAAOAOb/AQADAAQAAAAOAOf/AQADAAQAAAAOAOj/AQADAAQAAAAOAOn/AQADAAQAAAAOAOr/AQADAAQAAAAOAOv/AQADAAQAAAAOAOz/AQADAAQAAAAOAO3/AQADAAQAAAAOAO7/AQADAAQAAAAOAO//AQADAAQAAAAPAOT/AQADAAQAAAAPAOX/AQADAAQAAAAPAOb/AQADAAQAAAAPAOf/AQADAAQAAAAPAOj/AQADAAQAAAAPAOn/AQADAAQAAAAPAOr/AQADAAQAAAAPAOv/AQADAAQAAAAPAOz/AQADAAQAAAAPAO3/AQADAAQAAAAPAO7/AQADAAQAAAAPAO//AQADAAQAAAAQAOT/AQADAAQAAAAQAOX/AQADAAQAAAAQAOb/AQADAAQAAAAQAOf/AQADAAQAAAAQAOj/AQADAAQAAAAQAOn/AQADAAQAAAAQAOr/AQADAAQAAAAQAOv/AQADAAQAAAAQAOz/AQADAAQAAAAQAO3/AQADAAQAAAAQAO7/AQADAAQAAAAQAO//AQADAAQAAAARAOT/AQADAAQAAAARAOX/AQADAAQAAAARAOb/AQADAAQAAAARAOf/AQADAAQAAAARAOj/AQADAAQAAAARAOn/AQADAAQAAAARAOr/AQADAAQAAAARAOv/AQADAAQAAAARAOz/AQADAAQAAAARAO3/AQADAAQAAAARAO7/AQADAAQAAAARAO//AQADAAQAAAASAOT/AQADAAQAAAASAOX/AQADAAQAAAASAOb/AQADAAQAAAASAOf/AQADAAQAAAASAOj/AQADAAQAAAASAOn/AQADAAQAAAASAOr/AQADAAQAAAASAOv/AQADAAQAAAASAOz/AQADAAQAAAASAO3/AQADAAQAAAASAO7/AQADAAQAAAASAO//AQADAAQAAAABAPL/AQADAAQAAAABAPP/AQADAAQAAAABAPT/AQADAAQAAAABAPX/AQADAAQAAAABAPb/AQADAAQAAAABAPf/AQADAAQAAAABAPj/AQADAAQAAAABAPn/AQADAAQAAAABAPr/AQADAAQAAAABAPv/AQADAAQAAAABAPz/AQADAAQAAAABAP3/AQADAAQAAAABAP7/AQADAAQAAAACAPL/AQADAAQAAAACAPP/AQADAAQAAAACAPT/AQADAAQAAAACAPX/AQADAAQAAAACAPb/AQADAAQAAAACAPf/AQADAAQAAAACAPj/AQADAAQAAAACAPn/AQADAAQAAAACAPr/AQADAAQAAAACAPv/AQADAAQAAAACAPz/AQADAAQAAAACAP3/AQADAAQAAAACAP7/AQADAAQAAAADAPL/AQADAAQAAAADAPP/AQADAAQAAAADAPT/AQADAAQAAAADAPX/AQADAAQAAAADAPb/AQADAAQAAAADAPf/AQADAAQAAAADAPj/AQADAAQAAAADAPn/AQADAAQAAAADAPr/AQADAAQAAAADAPv/AQADAAQAAAADAPz/AQADAAQAAAADAP3/AQADAAQAAAADAP7/AQADAAQAAAAEAPL/AQADAAQAAAAEAPP/AQADAAQAAAAEAPT/AQADAAQAAAAEAPX/AQADAAQAAAAEAPb/AQADAAQAAAAEAPf/AQADAAQAAAAEAPj/AQADAAQAAAAEAPn/AQADAAQAAAAEAPr/AQADAAQAAAAEAPv/AQADAAQAAAAEAPz/AQADAAQAAAAEAP3/AQADAAQAAAAEAP7/AQADAAQAAAAFAPL/AQADAAQAAAAFAPP/AQADAAQAAAAFAPT/AQADAAQAAAAFAPX/AQADAAQAAAAFAPb/AQADAAQAAAAFAPf/AQADAAQAAAAFAPj/AQADAAQAAAAFAPn/AQADAAQAAAAFAPr/AQADAAQAAAAFAPv/AQADAAQAAAAFAPz/AQADAAQAAAAFAP3/AQADAAQAAAAFAP7/AQADAAQAAAAGAPL/AQADAAQAAAAGAPP/AQADAAQAAAAGAPT/AQADAAQAAAAGAPX/AQADAAQAAAAGAPb/AQADAAQAAAAGAPf/AQADAAQAAAAGAPj/AQADAAQAAAAGAPn/AQADAAQAAAAGAPr/AQADAAQAAAAGAPv/AQADAAQAAAAGAPz/AQADAAQAAAAGAP3/AQADAAQAAAAGAP7/AQADAAQAAAAHAPL/AQADAAQAAAAHAPP/AQADAAQAAAAHAPT/AQADAAQAAAAHAPX/AQADAAQAAAAHAPb/AQADAAQAAAAHAPf/AQADAAQAAAAHAPj/AQADAAQAAAAHAPn/AQADAAQAAAAHAPr/AQADAAQAAAAHAPv/AQADAAQAAAAHAPz/AQADAAQAAAAHAP3/AQADAAQAAAAHAP7/AQADAAQAAAAIAPL/AQADAAQAAAAIAPP/AQADAAQAAAAIAPT/AQADAAQAAAAIAPX/AQADAAQAAAAIAPb/AQADAAQAAAAIAPf/AQADAAQAAAAIAPj/AQADAAQAAAAIAPn/AQADAAQAAAAIAPr/AQADAAQAAAAIAPv/AQADAAQAAAAIAPz/AQADAAQAAAAIAP3/AQADAAQAAAAIAP7/AQADAAQAAAAJAPL/AQADAAQAAAAJAPP/AQADAAQAAAAJAPT/AQADAAQAAAAJAPX/AQADAAQAAAAJAPb/AQADAAQAAAAJAPf/AQADAAQAAAAJAPj/AQADAAQAAAAJAPn/AQADAAQAAAAJAPr/AQADAAQAAAAJAPv/AQADAAQAAAAJAPz/AQADAAQAAAAJAP3/AQADAAQAAAAJAP7/AQADAAQAAAAKAPL/AQADAAQAAAAKAPP/AQADAAQAAAAKAPT/AQADAAQAAAAKAPX/AQADAAQAAAAKAPb/AQADAAQAAAAKAPf/AQADAAQAAAAKAPj/AQADAAQAAAAKAPn/AQADAAQAAAAKAPr/AQADAAQAAAAKAPv/AQADAAQAAAAKAPz/AQADAAQAAAAKAP3/AQADAAQAAAAKAP7/AQADAAQAAAALAPL/AQADAAQAAAALAPP/AQADAAQAAAALAPT/AQADAAQAAAALAPX/AQADAAQAAAALAPb/AQADAAQAAAALAPf/AQADAAQAAAALAPj/AQADAAQAAAALAPn/AQADAAQAAAALAPr/AQADAAQAAAALAPv/AQADAAQAAAALAPz/AQADAAQAAAALAP3/AQADAAQAAAALAP7/AQADAAQAAAAMAPL/AQADAAQAAAAMAPP/AQADAAQAAAAMAPT/AQADAAQAAAAMAPX/AQADAAQAAAAMAPb/AQADAAQAAAAMAPf/AQADAAQAAAAMAPj/AQADAAQAAAAMAPn/AQADAAQAAAAMAPr/AQADAAQAAAAMAPv/AQADAAQAAAAMAPz/AQADAAQAAAAMAP3/AQADAAQAAAAMAP7/AQADAAQAAAANAPL/AQADAAQAAAANAPP/AQADAAQAAAANAPT/AQADAAQAAAANAPX/AQADAAQAAAANAPb/AQADAAQAAAANAPf/AQADAAQAAAANAPj/AQADAAQAAAANAPn/AQADAAQAAAANAPr/AQADAAQAAAANAPv/AQADAAQAAAANAPz/AQADAAQAAAANAP3/AQADAAQAAAANAP7/AQADAAQAAAAOAPL/AQADAAQAAAAOAPP/AQADAAQAAAAOAPT/AQADAAQAAAAOAPX/AQADAAQAAAAOAPb/AQADAAQAAAAOAPf/AQADAAQAAAAOAPj/AQADAAQAAAAOAPn/AQADAAQAAAAOAPr/AQADAAQAAAAOAPv/AQADAAQAAAAOAPz/AQADAAQAAAAOAP3/AQADAAQAAAAOAP7/AQADAAQAAAAPAPL/AQADAAQAAAAPAPP/AQADAAQAAAAPAPT/AQADAAQAAAAPAPX/AQADAAQAAAAPAPb/AQADAAQAAAAPAPf/AQADAAQAAAAPAPj/AQADAAQAAAAPAPn/AQADAAQAAAAPAPr/AQADAAQAAAAPAPv/AQADAAQAAAAPAPz/AQADAAQAAAAPAP3/AQADAAQAAAAPAP7/AQADAAQAAAAQAPL/AQADAAQAAAAQAPP/AQADAAQAAAAQAPT/AQADAAQAAAAQAPX/AQADAAQAAAAQAPb/AQADAAQAAAAQAPf/AQADAAQAAAAQAPj/AQADAAQAAAAQAPn/AQADAAQAAAAQAPr/AQADAAQAAAAQAPv/AQADAAQAAAAQAPz/AQADAAQAAAAQAP3/AQADAAQAAAAQAP7/AQADAAQAAAARAPL/AQADAAQAAAARAPP/AQADAAQAAAARAPT/AQADAAQAAAARAPX/AQADAAQAAAARAPb/AQADAAQAAAARAPf/AQADAAQAAAARAPj/AQADAAQAAAARAPn/AQADAAQAAAARAPr/AQADAAQAAAARAPv/AQADAAQAAAARAPz/AQADAAQAAAARAP3/AQADAAQAAAARAP7/AQADAAQAAAASAPL/AQADAAQAAAASAPP/AQADAAQAAAASAPT/AQADAAQAAAASAPX/AQADAAQAAAASAPb/AQADAAQAAAASAPf/AQADAAQAAAASAPj/AQADAAQAAAASAPn/AQADAAQAAAASAPr/AQADAAQAAAASAPv/AQADAAQAAAASAPz/AQADAAQAAAASAP3/AQADAAQAAAASAP7/AQADAAQAAAABAAEAAQADAAQAAAABAAIAAQADAAQAAAABAAMAAQADAAQAAAABAAQAAQADAAQAAAABAAUAAQADAAQAAAABAAYAAQADAAQAAAABAAcAAQADAAQAAAABAAgAAQADAAQAAAABAAkAAQADAAQAAAABAAoAAQADAAQAAAABAAsAAQADAAQAAAABAAwAAQADAAQAAAABAA0AAQADAAQAAAACAAEAAQADAAQAAAACAAIAAQADAAQAAAACAAMAAQADAAQAAAACAAQAAQADAAQAAAACAAUAAQADAAQAAAACAAYAAQADAAQAAAACAAcAAQADAAQAAAACAAgAAQADAAQAAAACAAkAAQADAAQAAAACAAoAAQADAAQAAAACAAsAAQADAAQAAAACAAwAAQADAAQAAAACAA0AAQADAAQAAAADAAEAAQADAAQAAAADAAIAAQADAAQAAAADAAMAAQADAAQAAAADAAQAAQADAAQAAAADAAUAAQADAAQAAAADAAYAAQADAAQAAAADAAcAAQADAAQAAAADAAgAAQADAAQAAAADAAkAAQADAAQAAAADAAoAAQADAAQAAAADAAsAAQADAAQAAAADAAwAAQADAAQAAAADAA0AAQADAAQAAAAEAAEAAQADAAQAAAAEAAIAAQADAAQAAAAEAAMAAQADAAQAAAAEAAQAAQADAAQAAAAEAAUAAQADAAQAAAAEAAYAAQADAAQAAAAEAAcAAQADAAQAAAAEAAgAAQADAAQAAAAEAAkAAQADAAQAAAAEAAoAAQADAAQAAAAEAAsAAQADAAQAAAAEAAwAAQADAAQAAAAEAA0AAQADAAQAAAAFAAEAAQADAAQAAAAFAAIAAQADAAQAAAAFAAMAAQADAAQAAAAFAAQAAQADAAQAAAAFAAUAAQADAAQAAAAFAAYAAQADAAQAAAAFAAcAAQADAAQAAAAFAAgAAQADAAQAAAAFAAkAAQADAAQAAAAFAAoAAQADAAQAAAAFAAsAAQADAAQAAAAFAAwAAQADAAQAAAAFAA0AAQADAAQAAAAGAAEAAQADAAQAAAAGAAIAAQADAAQAAAAGAAMAAQADAAQAAAAGAAQAAQADAAQAAAAGAAUAAQADAAQAAAAGAAYAAQADAAQAAAAGAAcAAQADAAQAAAAGAAgAAQADAAQAAAAGAAkAAQADAAQAAAAGAAoAAQADAAQAAAAGAAsAAQADAAQAAAAGAAwAAQADAAQAAAAGAA0AAQADAAQAAAAHAAEAAQADAAQAAAAHAAIAAQADAAQAAAAHAAMAAQADAAQAAAAHAAQAAQADAAQAAAAHAAUAAQADAAQAAAAHAAYAAQADAAQAAAAHAAcAAQADAAQAAAAHAAgAAQADAAQAAAAHAAkAAQADAAQAAAAHAAoAAQADAAQAAAAHAAsAAQADAAQAAAAHAAwAAQADAAQAAAAHAA0AAQADAAQAAAAIAAEAAQADAAQAAAAIAAIAAQADAAQAAAAIAAMAAQADAAQAAAAIAAQAAQADAAQAAAAIAAUAAQADAAQAAAAIAAYAAQADAAQAAAAIAAcAAQADAAQAAAAIAAgAAQADAAQAAAAIAAkAAQADAAQAAAAIAAoAAQADAAQAAAAIAAsAAQADAAQAAAAIAAwAAQADAAQAAAAIAA0AAQADAAQAAAAJAAEAAQADAAQAAAAJAAIAAQADAAQAAAAJAAMAAQADAAQAAAAJAAQAAQADAAQAAAAJAAUAAQADAAQAAAAJAAYAAQADAAQAAAAJAAcAAQADAAQAAAAJAAgAAQADAAQAAAAJAAkAAQADAAQAAAAJAAoAAQADAAQAAAAJAAsAAQADAAQAAAAJAAwAAQADAAQAAAAJAA0AAQADAAQAAAAKAAEAAQADAAQAAAAKAAIAAQADAAQAAAAKAAMAAQADAAQAAAAKAAQAAQADAAQAAAAKAAUAAQADAAQAAAAKAAYAAQADAAQAAAAKAAcAAQADAAQAAAAKAAgAAQADAAQAAAAKAAkAAQADAAQAAAAKAAoAAQADAAQAAAAKAAsAAQADAAQAAAAKAAwAAQADAAQAAAAKAA0AAQADAAQAAAALAAEAAQADAAQAAAALAAIAAQADAAQAAAALAAMAAQADAAQAAAALAAQAAQADAAQAAAALAAUAAQADAAQAAAALAAYAAQADAAQAAAALAAcAAQADAAQAAAALAAgAAQADAAQAAAALAAkAAQADAAQAAAALAAoAAQADAAQAAAALAAsAAQADAAQAAAALAAwAAQADAAQAAAALAA0AAQADAAQAAAAMAAEAAQADAAQAAAAMAAIAAQADAAQAAAAMAAMAAQADAAQAAAAMAAQAAQADAAQAAAAMAAUAAQADAAQAAAAMAAYAAQADAAQAAAAMAAcAAQADAAQAAAAMAAgAAQADAAQAAAAMAAkAAQADAAQAAAAMAAoAAQADAAQAAAAMAAsAAQADAAQAAAAMAAwAAQADAAQAAAAMAA0AAQADAAQAAAANAAEAAQADAAQAAAANAAIAAQADAAQAAAANAAMAAQADAAQAAAANAAQAAQADAAQAAAANAAUAAQADAAQAAAANAAYAAQADAAQAAAANAAcAAQADAAQAAAANAAgAAQADAAQAAAANAAkAAQADAAQAAAANAAoAAQADAAQAAAANAAsAAQADAAQAAAANAAwAAQADAAQAAAANAA0AAQADAAQAAAAOAAEAAQADAAQAAAAOAAIAAQADAAQAAAAOAAMAAQADAAQAAAAOAAQAAQADAAQAAAAOAAUAAQADAAQAAAAOAAYAAQADAAQAAAAOAAcAAQADAAQAAAAOAAgAAQADAAQAAAAOAAkAAQADAAQAAAAOAAoAAQADAAQAAAAOAAsAAQADAAQAAAAOAAwAAQADAAQAAAAOAA0AAQADAAQAAAAPAAEAAQADAAQAAAAPAAIAAQADAAQAAAAPAAMAAQADAAQAAAAPAAQAAQADAAQAAAAPAAUAAQADAAQAAAAPAAYAAQADAAQAAAAPAAcAAQADAAQAAAAPAAgAAQADAAQAAAAPAAkAAQADAAQAAAAPAAoAAQADAAQAAAAPAAsAAQADAAQAAAAPAAwAAQADAAQAAAAPAA0AAQADAAQAAAAQAAEAAQADAAQAAAAQAAIAAQADAAQAAAAQAAMAAQADAAQAAAAQAAQAAQADAAQAAAAQAAUAAQADAAQAAAAQAAYAAQADAAQAAAAQAAcAAQADAAQAAAAQAAgAAQADAAQAAAAQAAkAAQADAAQAAAAQAAoAAQADAAQAAAAQAAsAAQADAAQAAAAQAAwAAQADAAQAAAAQAA0AAQADAAQAAAARAAEAAQADAAQAAAARAAIAAQADAAQAAAARAAMAAQADAAQAAAARAAQAAQADAAQAAAARAAUAAQADAAQAAAARAAYAAQADAAQAAAARAAcAAQADAAQAAAARAAgAAQADAAQAAAARAAkAAQADAAQAAAARAAoAAQADAAQAAAARAAsAAQADAAQAAAARAAwAAQADAAQAAAARAA0AAQADAAQAAAASAAEAAQADAAQAAAASAAIAAQADAAQAAAASAAMAAQADAAQAAAASAAQAAQADAAQAAAASAAUAAQADAAQAAAASAAYAAQADAAQAAAASAAcAAQADAAQAAAASAAgAAQADAAQAAAASAAkAAQADAAQAAAASAAoAAQADAAQAAAASAAsAAQADAAQAAAASAAwAAQADAAQAAAASAA0AAQADAAQAAAATAAYAAQACAAoAAAATAAcAAQACAAoAAAAJAPD/AQADAAQAAAAJAPH/AQADAAQAAAAKAPD/AQADAAQAAAAKAPH/AQADAAQAAAAJAP//AQADAAQAAAAJAAAAAQADAAQAAAAKAP//AQADAAQAAAAKAAAAAQADAAQAAAADAOb/AQADAAQAAAADAOf/AQADAAQAAAADAOj/AQADAAQAAAADAOn/AQADAAQAAAAEAOb/AQADAAQAAAAEAOf/AQADAAQAAAAEAOj/AQADAAQAAAAEAOn/AQADAAQAAAAFAOb/AQADAAQAAAAFAOf/AQADAAQAAAAFAOj/AQADAAQAAAAFAOn/AQADAAQAAAAGAOb/AQADAAQAAAAGAOf/AQADAAQAAAAGAOj/AQADAAQAAAAGAOn/AQADAAQAAAAHAOb/AQADAAQAAAAHAOf/AQADAAQAAAAHAOj/AQADAAQAAAAHAOn/AQADAAQAAAAIAOb/AQADAAQAAAAIAOf/AQADAAQAAAAIAOj/AQADAAQAAAAIAOn/AQADAAQAAAAJAOb/AQADAAQAAAAJAOf/AQADAAQAAAAJAOj/AQADAAQAAAAJAOn/AQADAAQAAAAKAOb/AQADAAQAAAAKAOf/AQADAAQAAAAKAOj/AQADAAQAAAAKAOn/AQADAAQAAAAJAOP/AQADAAQAAAAKAOP/AQADAAQAAAA=")
tile_set = ExtResource("13_csm61")

[node name="Player" parent="." instance=ExtResource("16_d8joc")]
position = Vector2(192, 120)

[node name="Health_Component" parent="Player" index="0" node_paths=PackedStringArray("healthUI")]
healthUI = NodePath("../../CanvasLayer/PlayerHealthUI")

[node name="SwordHitbox" parent="Player/HitboxPivot" index="0"]
collision_mask = 264

[node name="Princess" parent="." instance=ExtResource("17_8f62i")]
position = Vector2(160, 120)

[node name="Health_Component" parent="Princess" index="0" node_paths=PackedStringArray("healthUI")]
healthUI = NodePath("../../CanvasLayer/PrincessHealthUI")

[node name="Hurtbox" parent="Princess" index="6"]
collision_mask = 128

[node name="AnimationTree" parent="Princess" index="9"]
parameters/Attack/blend_position = Vector2(0, 0)

[node name="Chest" parent="." instance=ExtResource("14_hvmxn")]
position = Vector2(160, 72)

[connection signal="player_down" from="Player/Health_Component" to="CombatManager" method="_on_health_component_player_down"]
[connection signal="princess_down" from="Princess/Health_Component" to="CombatManager" method="_on_health_component_princess_down"]
[connection signal="zone_triggered" from="Chest/ChestDialogueZone" to="." method="_on_chest_dialogue_zone_zone_triggered"]

[editable path="Player"]
[editable path="Player/Hurtbox"]
[editable path="Player/HitboxPivot/SwordHitbox"]
[editable path="Princess"]
[editable path="Princess/Hurtbox"]
[editable path="Chest"]
[editable path="Chest/ChestDialogueZone"]
